--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,47 @@
+alembic==1.3.3
 aniso8601==6.0.0
+astroid==2.3.3
+Babel==2.8.0
+bandit==1.6.2
 Click==7.0
+DateTime==4.3
+dominate==2.4.0
+entrypoints==0.3
+flake8==3.7.9
 Flask==1.0.3
+Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.7
+Flask-Migrate==2.5.2
+Flask-Moment==0.9.0
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
+gitdb2==2.0.6
+GitPython==3.0.5
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lazy-object-proxy==1.4.3
+Mako==1.1.1
 MarkupSafe==1.1.1
+mccabe==0.6.1
+pbr==5.4.4
+psycopg2==2.8.4
 psycopg2-binary==2.8.2
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pylint==2.4.4
+python-dateutil==2.6.0
+python-editor==1.0.4
 pytz==2019.1
+PyYAML==5.3
 six==1.12.0
+smmap2==2.0.5
 SQLAlchemy==1.3.4
+stevedore==1.31.0
+typed-ast==1.4.0
+visitor==0.1.3
 Werkzeug==0.15.4
+wrapt==1.11.2
+WTForms==2.2.1
+zope.interface==4.7.1
